--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.2",
+    "typedoc": "^0.28.1",
     "typescript": "^5.0.4",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
@@ -42,6 +43,7 @@
     "lint": "eslint --ext .js,.ts ./src",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "docs": "typedoc src"
   }
 }
