--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "allowJs": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": ["src/**/*.ts", "src/types/*.d.ts"]
 }
